# phantomx_reactor_arm

./: LICENSE  README.md
phantomx_reactor_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
phantomx_reactor_arm_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
phantomx_reactor_arm_controller/config/: 57-reactor_usb2dynamixel.rules  arbotix_config_phantomx_no_wrist.yaml  arbotix_config_phantomx_wrist.yaml  dynamixel_controllers.yaml  dynamixel_manager.yaml  no_wrist_arbotix_config.yaml
phantomx_reactor_arm_controller/launch/: arbotix_phantomx_reactor_arm_no_wrist.launch  arbotix_phantomx_reactor_arm_wrist.launch  arbotix_phantomx_reactor_arm_wrist_description.launch  dynamixel_phantomx_reactor_arm_wrist.launch  dynamixel_phantomx_reactor_arm_wrist_description.launch  reactor_4dof.launch  reactor_dynamixel_5dof.launch
phantomx_reactor_arm_controller/src/: phantomx_reactor.py  phantomx_reactor_gripper.py  phantomx_reactor_parallel_motor_joints.py
phantomx_reactor_arm_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
phantomx_reactor_arm_description/launch/: phantomx_reactor_4dof.launch  phantomx_reactor_no_wrist.launch  phantomx_reactor_wrist_gripper.launch  phantomx_reactor_wrist_load_description.launch  phantomx_reactor_wrist_rviz_demo.launch
phantomx_reactor_arm_description/meshes/: Gripper_Hand_Fixed.stl  Gripper_Hand_Fixed_Centered.stl  Guide_Rail_Fixed.stl  Guide_Rail_Fixed_Centered.stl  base_link_real.STL  create_collision_mesh.mlx  wrist_2.STL  wrist_2_hull.STL
phantomx_reactor_arm_description/robots/: phantomx_reactor_arm_4dof.urdf.xacro  phantomx_reactor_arm_no_wrist.urdf.xacro  phantomx_reactor_arm_wrist.urdf.xacro
phantomx_reactor_arm_description/urdf/: phantomx_reactor_4dof.urdf.xacro  phantomx_reactor_no_wrist.urdf.xacro  phantomx_reactor_wrist.urdf.xacro  phantomx_reactor_wrist_gripper.urdf.xacro  phantomx_reactor_wrist_unified.urdf.xacro
phantomx_reactor_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_reactor_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  phantomx_reactor_arm.srdf
phantomx_reactor_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_real.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  phantomx_reactor_arm_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
reactor_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
reactor_moveit_config/config/: controllers.yaml  reactor_description.srdf
reactor_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  reactor_description_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
