<?xml version="1.0"?>
<package>
  <name>phantomx_reactor_arm</name>
  <version>0.1.0</version>
  <description>The phantomx_reactor_arm package</description>

  <maintainer email="rnavarro@robotnik.es">Roman Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>phantomx_reactor_arm_description</run_depend>
  <run_depend>phantomx_reactor_arm_controller</run_depend>

  <export><metapackage/></export>
</package>
