<?xml version="1.0"?>
<package>
  <name>phantomx_reactor_arm_controller</name>
  <version>0.1.4</version>
  <description>The phantomx_reactor_arm_controller package</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/phantomx_reactor_arm_controller</url>
  <url type="repository">https://github.com/RobotnikAutomation/phantomx_reactor_arm.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/phantomx_reactor_arm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>arbotix_python</build_depend>
  <run_depend>arbotix_python</run_depend> 
  <run_depend>rospy</run_depend> 

  <export></export>
</package>
