<?xml version="1.0"?>
<package>
  <name>phantomx_reactor_arm_description</name>
  <version>0.1.4</version>
  <description>The phantomx_reactor_arm_description package</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/phantomx_reactor_arm_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/phantomx_reactor_arm.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/phantomx_reactor_arm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
